--- a/experiments/Example5_1.ipynb
+++ b/experiments/Example5_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZ6Gh87NcbEdd03W/unpqx",
+      "authorship_tag": "ABX9TyPF+d7ZFUmmwBcecaHqGAjA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fohHMGTnPBxj",
-        "outputId": "4d1e72fc-8b0b-4b50-c6ae-0815e2796c2d"
+        "outputId": "b9adee10-b4ef-46ad-b026-4a62a6656673"
       },
       "outputs": [
         {
@@ -42,12 +42,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'sp-pa-gep'...\n",
-            "remote: Enumerating objects: 173, done.\u001b[K\n",
-            "remote: Counting objects: 100% (173/173), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (151/151), done.\u001b[K\n",
-            "remote: Total 173 (delta 72), reused 68 (delta 14), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (173/173), 2.88 MiB | 4.65 MiB/s, done.\n",
-            "Resolving deltas: 100% (72/72), done.\n",
+            "remote: Enumerating objects: 286, done.\u001b[K\n",
+            "remote: Counting objects: 100% (102/102), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (79/79), done.\u001b[K\n",
+            "remote: Total 286 (delta 71), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (286/286), 4.39 MiB | 12.26 MiB/s, done.\n",
+            "Resolving deltas: 100% (139/139), done.\n",
             "/content/sp-pa-gep\n"
           ]
         }
@@ -83,6 +83,44 @@
     {
       "cell_type": "code",
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def plot_metric_across_cases(logs_by_case, metric, ylabel, title, outpath):\n",
+        "    plt.figure()\n",
+        "    for name, logs in logs_by_case.items():\n",
+        "        if metric == \"step\":\n",
+        "            y = [L.step for L in logs]\n",
+        "        elif metric == \"residual\":\n",
+        "            y = [L.residual for L in logs if L.residual is not None]\n",
+        "        elif metric == \"error\":\n",
+        "            y = [L.error for L in logs if L.error is not None]\n",
+        "        else:\n",
+        "            continue\n",
+        "\n",
+        "        if len(y) == 0:\n",
+        "            continue\n",
+        "\n",
+        "        linestyle = \"-\" if \"SPPA\" in name else \"--\"\n",
+        "        plt.semilogy(range(len(y)), y, linestyle=linestyle, linewidth=2, label=name)\n",
+        "\n",
+        "    plt.xlabel(\"Iteration\")\n",
+        "    plt.ylabel(ylabel)\n",
+        "    plt.title(title)\n",
+        "    plt.grid(True, which=\"both\", linestyle=\"--\", linewidth=0.5)\n",
+        "    plt.legend(frameon=False)\n",
+        "    plt.tight_layout()\n",
+        "    plt.savefig(outpath, dpi=300)\n",
+        "    plt.close()"
+      ],
+      "metadata": {
+        "id": "2LJ--8YMNl3D"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
         "import src.benchkit as bk  # if you saved the library; otherwise paste needed functions\n",
         "# if you pasted plot_metric_across_cases into notebook, import it directly\n",
@@ -91,6 +129,7 @@
         "x_star = np.zeros(n)\n",
         "x0 = np.ones(n)\n",
         "u = np.zeros(n)\n",
+        "tau = 1e-12  # early stopping threshold on step size\n",
         "\n",
         "N = 200\n",
         "alpha_seq = np.array([1.0/(k+2) for k in range(N)], float)\n",
@@ -138,7 +177,7 @@
         "        method_name=f\"SPPA μ={mu}\",\n",
         "        x0=x0,\n",
         "        max_iter=N,\n",
-        "        stop_tol_step=1e-12,   # keep full length for fair plot\n",
+        "        stop_tol_step=tau,   # keep full length for fair plot\n",
         "        step_fn=make_sppa_step(mu),\n",
         "        residual_fn=make_residual(mu),\n",
         "        error_fn=error_fn,\n",
@@ -147,46 +186,57 @@
         "        method_name=f\"WPPA μ={mu}\",\n",
         "        x0=x0,\n",
         "        max_iter=N,\n",
-        "        stop_tol_step=1e-12,\n",
+        "        stop_tol_step=tau,\n",
         "        step_fn=make_wppa_step(mu),\n",
         "        residual_fn=make_residual(mu),\n",
         "        error_fn=error_fn,\n",
         "    )\n",
+        "    # --- empirical linear rate estimation (from error) ---\n",
+        "    k0 = 10  # ignore transient\n",
+        "    for name, logs in [(\"SPPA\", logs_sppa), (\"WPPA\", logs_wppa)]:\n",
+        "        e = np.array([L.error for L in logs if L.error is not None], float)\n",
+        "        if len(e) > k0 + 5:  # ensure enough data\n",
+        "            m, _ = np.polyfit(np.arange(k0, len(e)), np.log(e[k0:]), 1)\n",
+        "            q_emp = float(np.exp(m))\n",
+        "            q_theory = 1.0 / (1.0 + r * mu)\n",
+        "            print(f\"{name} μ={mu}: q_emp={q_emp:.6f}, q_theory={q_theory:.6f}\")\n",
         "\n",
         "    logs_by_case[f\"SPPA μ={mu}\"] = logs_sppa\n",
         "    logs_by_case[f\"WPPA μ={mu}\"] = logs_wppa\n",
         "    summaries.extend([sum_sppa, sum_wppa])\n",
         "\n",
         "# --- one figure per metric across all μ ---\n",
-        "bk.plot_metric_across_cases(\n",
+        "plot_metric_across_cases(\n",
         "    logs_by_case=logs_by_case,\n",
         "    metric=\"step\",\n",
         "    ylabel=r\"$\\|x_{n+1}-x_n\\|$\",\n",
-        "    title=\"Example 5.1: Step sizes (all μ)\",\n",
+        "    title=None,\n",
         "    outpath=\"figures/ex51_steps_all_mu.png\",\n",
         ")\n",
         "\n",
-        "bk.plot_metric_across_cases(\n",
+        "plot_metric_across_cases(\n",
         "    logs_by_case=logs_by_case,\n",
         "    metric=\"residual\",\n",
         "    ylabel=r\"$R(x_n)$\",\n",
-        "    title=\"Example 5.1: Residual (all μ)\",\n",
+        "    title=None,\n",
         "    outpath=\"figures/ex51_residual_all_mu.png\",\n",
         ")\n",
         "\n",
-        "bk.plot_metric_across_cases(\n",
+        "plot_metric_across_cases(\n",
         "    logs_by_case=logs_by_case,\n",
         "    metric=\"error\",\n",
-        "    ylabel=r\"$\\|x_n-\\bar{x}\\|$\",\n",
-        "    title=\"Example 5.1: Error (all μ)\",\n",
+        "    ylabel=r\"$\\|x_n\\|$\",\n",
+        "    title=None,\n",
         "    outpath=\"figures/ex51_error_all_mu.png\",\n",
         ")\n",
         "\n",
         "# --- one table for all μ (6 rows) ---\n",
-        "print(bk.latex_table(\n",
+        "print(bk.latex_tables_split(\n",
         "    summaries,\n",
-        "    caption=\"CPU/accuracy summary for Example 5.1 (all μ).\",\n",
-        "    label=\"tab:ex51_all_mu\",\n",
+        "    caption_perf=\"Computational performance for Example 5.1 (all $\\\\mu$).\",\n",
+        "    label_perf=\"tab:ex51_perf\",\n",
+        "    caption_acc=\"Accuracy summary for Example 5.1 (all $\\\\mu$).\",\n",
+        "    label_acc=\"tab:ex51_acc\",\n",
         "))"
       ],
       "metadata": {
@@ -194,30 +244,54 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5D2jD83PPv3",
-        "outputId": "9d69cb39-a0fc-4395-9227-bec3a6f34448"
+        "outputId": "557960ba-1bf4-4aae-a65f-cf758b38c8f3"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "SPPA μ=0.1: q_emp=0.898340, q_theory=0.909091\n",
+            "WPPA μ=0.1: q_emp=0.910163, q_theory=0.909091\n",
+            "SPPA μ=1.0: q_emp=0.479464, q_theory=0.500000\n",
+            "WPPA μ=1.0: q_emp=0.517554, q_theory=0.500000\n",
+            "SPPA μ=5.0: q_emp=0.155808, q_theory=0.166667\n",
+            "WPPA μ=5.0: q_emp=0.212727, q_theory=0.166667\n",
             "\\begin{table}[!ht]\n",
             "\\centering\n",
-            "\\begin{tabular}{lrrrrrr}\n",
+            "\\begin{tabular}{lrrrr}\n",
             "\\hline\n",
-            "Method & Iters & Total (s) & Avg resolvent (s) & Avg residual (s) & Final $\\|x_n-\\bar x\\|$ & Final $R(x_n)$\\\\\n",
+            "Method & It. & Tot (s) & Avg res (s) & Step$_f$\\\\\n",
             "\\hline\n",
-            "SPPA μ=0.1 & 200 & 0.0073 & 0.00001 & 0.00001 & 2.6198e-10 & 2.3816e-11 \\\\\n",
-            "WPPA μ=0.1 & 200 & 0.0076 & 0.00001 & 0.00001 & 8.5540e-08 & 7.7763e-09 \\\\\n",
-            "SPPA μ=1.0 & 38 & 0.0014 & 0.00001 & 0.00001 & 9.3282e-13 & 4.6641e-13 \\\\\n",
-            "WPPA μ=1.0 & 48 & 0.0018 & 0.00001 & 0.00001 & 8.8818e-13 & 4.4409e-13 \\\\\n",
-            "SPPA μ=5.0 & 17 & 0.0007 & 0.00001 & 0.00001 & 3.2821e-14 & 2.7351e-14 \\\\\n",
-            "WPPA μ=5.0 & 23 & 0.0008 & 0.00001 & 0.00001 & 2.5062e-13 & 2.0885e-13 \\\\\n",
+            "SPPA μ=0.1 & 200 & 0.0135 & 0.00001 & 2.7639e-11 \\\\\n",
+            "WPPA μ=0.1 & 200 & 0.0061 & 0.00001 & 8.5072e-09 \\\\\n",
+            "SPPA μ=1.0 & 38 & 0.0025 & 0.00001 & 9.8191e-13 \\\\\n",
+            "WPPA μ=1.0 & 48 & 0.0011 & 0.00001 & 8.5265e-13 \\\\\n",
+            "SPPA μ=5.0 & 17 & 0.0004 & 0.00001 & 1.7569e-13 \\\\\n",
+            "WPPA μ=5.0 & 23 & 0.0005 & 0.00001 & 9.9385e-13 \\\\\n",
             "\\hline\n",
             "\\end{tabular}\n",
-            "\\caption{CPU/accuracy summary for Example 5.1 (all μ).}\n",
-            "\\label{tab:ex51_all_mu}\n",
+            "\\caption{Computational performance for Example 5.1 (all $\\mu$).}\n",
+            "\\label{tab:ex51_perf}\n",
+            "\\end{table}\n",
+            "\n",
+            "\\begin{table}[!ht]\n",
+            "\\centering\n",
+            "\\begin{tabular}{lrr}\n",
+            "\\hline\n",
+            "Method & $\\lVert x_n-\\bar{x}\\rVert$ & $R(x_n)$\\\\\n",
+            "\\hline\n",
+            "SPPA μ=0.1 & 2.6198e-10 & 2.3816e-11 \\\\\n",
+            "WPPA μ=0.1 & 8.5540e-08 & 7.7763e-09 \\\\\n",
+            "SPPA μ=1.0 & 9.3282e-13 & 4.6641e-13 \\\\\n",
+            "WPPA μ=1.0 & 8.8818e-13 & 4.4409e-13 \\\\\n",
+            "SPPA μ=5.0 & 3.2821e-14 & 2.7351e-14 \\\\\n",
+            "WPPA μ=5.0 & 2.5062e-13 & 2.0885e-13 \\\\\n",
+            "\\hline\n",
+            "\\end{tabular}\n",
+            "\\caption{Accuracy summary for Example 5.1 (all $\\mu$).}\n",
+            "\\label{tab:ex51_acc}\n",
             "\\end{table}\n",
             "\n"
           ]
@@ -234,7 +308,7 @@
       "metadata": {
         "id": "ConqH7neYnT_"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +319,7 @@
       "metadata": {
         "id": "NUHL3PW4YrO_"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +347,7 @@
       "metadata": {
         "id": "MIl9doeSYxPr"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +362,7 @@
         "id": "Nn9-XnlWY2OD",
         "outputId": "a18fe445-f77e-444b-9fc6-4cf15a9b06d7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -315,7 +389,7 @@
         "id": "HBr6cwaHY-3n",
         "outputId": "734387b7-34af-442d-e107-e4073508d35c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +414,7 @@
         "id": "tLZ53MZSZClE",
         "outputId": "2f00e751-b0d5-4eb7-fc50-c7a1f5aa148f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
