--- a/experiments/Example5_2.ipynb
+++ b/experiments/Example5_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7RhR6e+59OWrFPBRNMmud",
+      "authorship_tag": "ABX9TyMeqhKaJyXhkP25iOfBTuUy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N8QvFM28b-tM",
-        "outputId": "b28749ed-423f-4fa0-edd2-8df1a57e0703"
+        "outputId": "bc1a5472-53a8-41df-a5d3-c60dcf21170b"
       },
       "outputs": [
         {
@@ -42,12 +42,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'sp-pa-gep'...\n",
-            "remote: Enumerating objects: 187, done.\u001b[K\n",
-            "remote: Counting objects: 100% (187/187), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (163/163), done.\u001b[K\n",
-            "remote: Total 187 (delta 79), reused 73 (delta 15), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (187/187), 3.44 MiB | 8.73 MiB/s, done.\n",
-            "Resolving deltas: 100% (79/79), done.\n",
+            "remote: Enumerating objects: 290, done.\u001b[K\n",
+            "remote: Counting objects: 100% (106/106), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (83/83), done.\u001b[K\n",
+            "remote: Total 290 (delta 74), reused 23 (delta 23), pack-reused 184 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (290/290), 4.40 MiB | 6.86 MiB/s, done.\n",
+            "Resolving deltas: 100% (142/142), done.\n",
             "/content/sp-pa-gep\n"
           ]
         }
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "UWtmil20cb49"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "    return t * x\n",
         "\n",
         "#Build a PSD matrix A>=0\n",
-        "def make_psd_matrix(m=5, seed=0):\n",
+        "def make_psd_matrix(m=5, seed=123):\n",
         "    rng = np.random.default_rng(seed)\n",
         "    B = rng.uniform(-2, 2, size=(m, m))\n",
         "    A = B.T @ B  # PSD\n",
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "HbCD9aYccimY"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -176,19 +176,43 @@
         "def make_sppa_step():\n",
         "    def step_fn(x, k):\n",
         "        alpha = 1.0 / (k + 2.0)\n",
-        "        u_n, it = resolvent_inner_fixed_point(x, r, F, inner_tol=inner_tol, inner_maxit=inner_maxit)\n",
+        "\n",
+        "        u_n, it = resolvent_inner_fixed_point(\n",
+        "            x, r, F, inner_tol=inner_tol, inner_maxit=inner_maxit\n",
+        "        )\n",
+        "\n",
+        "        hit = (it >= inner_maxit)\n",
+        "        ok = (not hit)\n",
+        "\n",
         "        x_new = alpha * u_anchor + (1.0 - alpha) * u_n\n",
-        "        return x_new, {\"inner_iters\": it}\n",
+        "        return x_new, {\n",
+        "            \"inner_iters\": it,\n",
+        "            \"inner_hit_max\": hit,\n",
+        "            \"ok\": ok,\n",
+        "            \"constraint_violation\": 0.0,  # proj_box enforces feasibility\n",
+        "        }\n",
         "    return step_fn\n",
+        "\n",
         "\n",
         "def make_wppa_step():\n",
         "    def step_fn(x, k):\n",
         "        alpha = 1.0 / (k + 2.0)\n",
-        "        u_n, it = resolvent_inner_fixed_point(x, r, F, inner_tol=inner_tol, inner_maxit=inner_maxit)\n",
-        "        x_new = alpha * x + (1.0 - alpha) * u_n\n",
-        "        return x_new, {\"inner_iters\": it}\n",
-        "    return step_fn\n",
         "\n",
+        "        u_n, it = resolvent_inner_fixed_point(\n",
+        "            x, r, F, inner_tol=inner_tol, inner_maxit=inner_maxit\n",
+        "        )\n",
+        "\n",
+        "        hit = (it >= inner_maxit)\n",
+        "        ok = (not hit)\n",
+        "\n",
+        "        x_new = alpha * x + (1.0 - alpha) * u_n\n",
+        "        return x_new, {\n",
+        "            \"inner_iters\": it,\n",
+        "            \"inner_hit_max\": hit,\n",
+        "            \"ok\": ok,\n",
+        "            \"constraint_violation\": 0.0,\n",
+        "        }\n",
+        "    return step_fn\n",
         "def residual_fn(x):\n",
         "    return residual_R(x, r, F)\n",
         "\n",
@@ -223,10 +247,12 @@
         ")\n",
         "\n",
         "# --- LaTeX table ---\n",
-        "print(bk.latex_table(\n",
+        "print(bk.latex_tables_split(\n",
         "    [sum_sppa, sum_wppa],\n",
-        "    caption=\"CPU/accuracy summary for Example 5.2 (nonlinear monotone EP).\",\n",
-        "    label=\"tab:ex52\",\n",
+        "    caption_perf=\"Computational performance for Experiment 2.\",\n",
+        "    label_perf=\"tab:ex52_perf\",\n",
+        "    caption_acc=\"Accuracy and feasibility metrics for Experiment 2.\",\n",
+        "    label_acc=\"tab:ex52_acc\",\n",
         "))"
       ],
       "metadata": {
@@ -234,9 +260,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RksSYfxRdmsL",
-        "outputId": "73a13646-47f0-4ff5-bf80-6c3e423cc8a5"
+        "outputId": "5bcbbee9-f7de-484d-9982-0e27beaac181"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,16 +270,30 @@
           "text": [
             "\\begin{table}[!ht]\n",
             "\\centering\n",
-            "\\begin{tabular}{lrrrrrr}\n",
+            "\\begin{tabular}{lrrrrrrrr}\n",
             "\\hline\n",
-            "Method & Iters & Total (s) & Avg resolvent (s) & Avg residual (s) & Final $\\|x_n-\\bar x\\|$ & Final $R(x_n)$\\\\\n",
+            "Method & It. & Tot (s) & Avg res (s) & Step$_f$ & Avg in. & Max in. & \\% max & Succ. (\\%)\\\\\n",
             "\\hline\n",
-            "SPPA & 150 & 0.5490 & 0.00362 & 0.00002 & - & 7.2922e-04 \\\\\n",
-            "WPPA & 150 & 0.8473 & 0.00559 & 0.00004 & - & 2.2910e-03 \\\\\n",
+            "SPPA & 150 & 0.5292 & 0.00349 & 4.8813e-06 & 197.55 & 200 & 98.0 & 2.0 \\\\\n",
+            "WPPA & 150 & 0.7469 & 0.00492 & 5.9745e-07 & 191.57 & 200 & 92.7 & 7.3 \\\\\n",
             "\\hline\n",
             "\\end{tabular}\n",
-            "\\caption{CPU/accuracy summary for Example 5.2 (nonlinear monotone EP).}\n",
-            "\\label{tab:ex52}\n",
+            "\\caption{Computational performance for Experiment 2.}\n",
+            "\\label{tab:ex52_perf}\n",
+            "\\end{table}\n",
+            "\n",
+            "\\begin{table}[!ht]\n",
+            "\\centering\n",
+            "\\begin{tabular}{lrr}\n",
+            "\\hline\n",
+            "Method & Constr. viol. & $R(x_n)$\\\\\n",
+            "\\hline\n",
+            "SPPA & 0 & 7.2922e-04 \\\\\n",
+            "WPPA & 0 & 2.2910e-03 \\\\\n",
+            "\\hline\n",
+            "\\end{tabular}\n",
+            "\\caption{Accuracy and feasibility metrics for Experiment 2.}\n",
+            "\\label{tab:ex52_acc}\n",
             "\\end{table}\n",
             "\n"
           ]
